--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <section class="container">
       <nav>
-        <img src="\images\status-bar.png" alt="status bar">
+        <img src="images/status-bar.png" alt="status bar">
         <div class="back">
           <i class="fa fa-chevron-left fa-1x" aria-hidden="true"></i>
           Back
